chore: basically done .env and configurations

--- a/.env
+++ b/.env
@@ -1,1 +1,26 @@
-VITE_APP_MOCK=on
+# @type number
+VITE_PORT=23012
+
+# @type hash | history;
+VITE_ROUTER_MODE=history
+
+# @type gzip | brotli | gzip,brotli | none;
+VITE_BUILD_COMPRESS=gzip
+
+# @type boolean
+VITE_PWA=
+VITE_OPEN=true
+VITE_REPORT=
+VITE_APP_MOCK=
+VITE_DROP_CONSOLE=
+VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE=
+
+# @type string
+# API 前缀
+VITE_API_URL=
+VITE_PUBLIC_PATH=
+# 标题
+VITE_GLOB_APP_TITLE=Dot Admin
+
+# @type Array<[string, string]>
+VITE_PROXY=[]
