--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest --config vitest.config.ts",
-    "msw:init": "pnpx msw init public"
+    "msw:init": "pnpx msw init public",
+    "taze": "pnpx taze",
+    "taze:major": "pnpx taze major"
   },
   "dependencies": {
     "@reactuses/core": "^5.0.15",
@@ -27,7 +29,7 @@
     "dayjs": "^1.11.11",
     "echarts": "^5.5.0",
     "immer": "^10.1.1",
-    "lucide-react": "^0.381.0",
+    "lucide-react": "^0.396.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
@@ -38,7 +40,7 @@
     "@antfu/eslint-config": "^2.21.1",
     "@eslint-react/eslint-plugin": "^1.5.16",
     "@faker-js/faker": "^8.4.1",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
@@ -49,6 +51,7 @@
     "sass": "^1.77.6",
     "typescript": "^5.5.2",
     "vite": "^5.3.1",
+    "vite-plugin-html": "^3.2.2",
     "vitest": "^1.6.0"
   },
   "msw": {
