--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,9 +29,7 @@
     "src/**/*.tsx",
     "build/**/*.ts",
     "build/**/*.d.ts",
-
-    "vite.config.ts",
-    "vitest.config.ts"
+    "vite.config.ts"
   ],
   "exclude": [
     "node_modules",
