chore: refactor a lot

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE=
 
 # @type string
 # API 前缀
-VITE_API_URL=
+VITE_API_URL=/api
 VITE_PUBLIC_PATH=
 # 标题
 VITE_GLOB_APP_TITLE=Dot Admin
