--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "homepage": "https://github.com/iamwxq/dot-admin",
   "scripts": {
+    "cz": "cz",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
@@ -20,7 +21,8 @@
     "test": "vitest",
     "msw:init": "pnpx msw init public",
     "taze": "pnpx taze",
-    "taze:major": "pnpx taze major"
+    "taze:major": "pnpx taze major",
+    "prepare": "husky"
   },
   "dependencies": {
     "@reactuses/core": "^5.0.15",
@@ -38,15 +40,21 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.1",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@eslint-react/eslint-plugin": "^1.5.16",
     "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "msw": "^2.3.1",
     "sass": "^1.77.6",
     "typescript": "^5.5.2",
@@ -58,5 +66,10 @@
     "workerDirectory": [
       "public"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
