--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "@reactuses/core": "^5.0.15",
+    "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-query-devtools": "^5.49.2",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
@@ -35,7 +37,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
-    "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
