feat(deps): update deps

--- a/.env
+++ b/.env
@@ -12,13 +12,13 @@ VITE_PWA=
 VITE_OPEN=true
 VITE_REPORT=
 VITE_APP_MOCK=
-VITE_DROP_CONSOLE=
+VITE_DROP_CONSOLE=true
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE=
 
 # @type string
 # API 前缀
 VITE_API_URL=/api
-VITE_PUBLIC_PATH=
+VITE_PUBLIC_PATH=./
 # 标题
 VITE_GLOB_APP_TITLE=Dot Admin
 
