feat(api): improve api structure

--- a/.env
+++ b/.env
@@ -1,26 +1,31 @@
 # @type number
-VITE_PORT=23012
+# 项目启动端口
+VITE_PORT=
 
 # @type hash | history;
+# 路由模式
 VITE_ROUTER_MODE=history
 
 # @type gzip | brotli | gzip,brotli | none;
+# 压缩方式
 VITE_BUILD_COMPRESS=gzip
 
 # @type boolean
 VITE_PWA=
+# 启动项目时自动打开
 VITE_OPEN=true
 VITE_REPORT=
+# 开启MOCK/关闭MOCK, 打开MOCK时自动关闭代理; 关闭MOCK时自动打开代理
 VITE_APP_MOCK=
+# 打包时清理CONSOLE语句
 VITE_DROP_CONSOLE=true
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE=
 
 # @type string
 # API 前缀
 VITE_API_URL=/api
+# 项目公共前缀
 VITE_PUBLIC_PATH=./
-# 标题
+# 应用标题
 VITE_GLOB_APP_TITLE=Dot Admin
 
-# @type Array<[string, string]>
-VITE_PROXY=[]
