--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.5.0",
   "description": "A comprehensive workplace system",
   "author": {
     "name": "iamwxq",
@@ -26,26 +26,28 @@
   },
   "dependencies": {
     "@reactuses/core": "^5.0.15",
-    "@tanstack/react-query": "^5.49.2",
-    "@tanstack/react-query-devtools": "^5.49.2",
-    "antd": "^5.18.3",
+    "@tanstack/react-query": "^5.50.1",
+    "@tanstack/react-query-devtools": "^5.50.1",
+    "antd": "^5.19.1",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "echarts": "^5.5.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.396.0",
+    "ramda": "^0.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.24.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.2",
+    "@antfu/eslint-config": "^2.21.3",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint-react/eslint-plugin": "^1.5.18",
+    "@eslint-react/eslint-plugin": "^1.5.23",
     "@faker-js/faker": "^8.4.1",
-    "@types/node": "^20.14.9",
+    "@types/node": "^20.14.10",
+    "@types/ramda": "^0.30.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
@@ -58,8 +60,8 @@
     "lint-staged": "^15.2.7",
     "msw": "^2.3.1",
     "sass": "^1.77.6",
-    "typescript": "^5.5.2",
-    "vite": "^5.3.2",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3",
     "vite-plugin-html": "^3.2.2",
     "vitest": "^1.6.0"
   },
