chore(all): regular update

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 # 项目启动端口
 VITE_PORT=23012
 
-# 开启MOCK/关闭MOCK, 打开MOCK时自动关闭代理; 关闭MOCK时自动打开代理
+### 开启MOCK/关闭MOCK, 打开MOCK时自动关闭代理; 关闭MOCK时自动打开代理
+### true: 打开; 其余值均为关闭
 VITE_APP_MOCK=true
