--- a/.env
+++ b/.env
@@ -1,31 +1,25 @@
-# @type number
 # 项目启动端口
 VITE_PORT=
 
-# @type hash | history;
-# 路由模式
+#  hash | history;
 VITE_ROUTER_MODE=history
 
-# @type gzip | brotli | gzip,brotli | none;
-# 压缩方式
+# gzip | brotli | gzip,brotli | none;
 VITE_BUILD_COMPRESS=gzip
 
-# @type boolean
+# 启用PWA
 VITE_PWA=
 # 启动项目时自动打开
 VITE_OPEN=true
 VITE_REPORT=
-# 开启MOCK/关闭MOCK, 打开MOCK时自动关闭代理; 关闭MOCK时自动打开代理
 VITE_APP_MOCK=
 # 打包时清理CONSOLE语句
 VITE_DROP_CONSOLE=true
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE=
 
-# @type string
 # API 前缀
 VITE_API_URL=/api
 # 项目公共前缀
 VITE_PUBLIC_PATH=./
 # 应用标题
 VITE_GLOB_APP_TITLE=Dot Admin
-
