--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "spark-md5": "^3.0.2",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/ramda": "^0.30.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/spark-md5": "^3.0.4",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
@@ -63,6 +65,7 @@
     "typescript": "^5.5.3",
     "vite": "^5.3.3",
     "vite-plugin-html": "^3.2.2",
+    "vite-plugin-pwa": "^0.20.0",
     "vitest": "^1.6.0"
   },
   "msw": {
