chore(env): update envs

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ VITE_OPEN=true
 VITE_REPORT=
 VITE_APP_MOCK=
 # 打包时清理CONSOLE语句
-VITE_DROP_CONSOLE=true
+VITE_DROP_CONSOLE=
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE=
 
 # API 前缀
