feat(api): update request methods and structures

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,5 @@
 
   "errorLens.excludeBySource": ["eslint"],
 
-  "typescript.tsdk": "../node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
