--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.0",
     "@reactuses/core": "^5.0.21",
     "@tanstack/react-query": "^5.51.24",
     "@tanstack/react-query-devtools": "^5.51.24",
