--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "private": true,
-  "packageManager": "pnpm@9.10.0",
+  "packageManager": "pnpm@9.11.0",
   "description": "A comprehensive workplace system",
   "author": {
     "name": "iamwxq",
@@ -29,8 +29,8 @@
     "@ant-design/icons": "^5.5.1",
     "@reactuses/core": "^5.0.21",
     "@tanstack/react-query": "^5.56.2",
-    "@tanstack/react-query-devtools": "^5.56.2",
-    "antd": "^5.20.6",
+    "@tanstack/react-query-devtools": "^5.58.0",
+    "antd": "^5.21.0",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "echarts": "^5.5.1",
@@ -39,33 +39,34 @@
     "ramda": "^0.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-number-format": "^5.4.2",
     "react-router-dom": "^6.26.2",
     "spark-md5": "^3.0.2",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.6.2",
+    "@antfu/eslint-config": "^3.7.1",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint-react/eslint-plugin": "^1.14.2",
-    "@faker-js/faker": "^9.0.1",
-    "@types/node": "^22.5.5",
+    "@faker-js/faker": "^9.0.2",
+    "@types/node": "^22.7.0",
     "@types/ramda": "^0.30.2",
-    "@types/react": "^18.3.8",
+    "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "@types/spark-md5": "^3.0.4",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.10.0",
+    "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "msw": "^2.4.8",
-    "sass": "^1.79.2",
+    "msw": "^2.4.9",
+    "sass": "^1.79.3",
     "typescript": "^5.6.2",
-    "vite": "^5.4.6",
+    "vite": "^5.4.7",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "^0.20.5",
     "vitest": "^2.1.1"
